# bogamatic-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install.ps1  install.sh
src/bogamatic_mcp/: api.py  server.py
